--- a/index.html
+++ b/index.html
@@ -68,18 +68,12 @@
                                         <a href="#">Home</a>
 
                                     </li>
-                                    <li class="has-dropdown">
-                                        <a href="#">Pages</a>
 
-                                    </li>
                                     <li class="has-dropdown">
                                         <a href="#">Donation</a>
 
                                     </li>
-                                    <li class="has-dropdown">
-                                        <a href="#">Blog</a>
 
-                                    </li>
                                     <li>
                                         <a href="#">Contact</a>
                                     </li>
@@ -266,7 +260,7 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-5 col-md-12">
                         <div class="tpfeatures-section__wrapper mb-40">
-                            <span class="section-sub-title has-before wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">what we do</span>
+                            <span class="section-sub-title has-before wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">ታሳ ታሳ</span>
                             <h3 class="section-title wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Various things we can help them</h3>
                             <div class="tpfeatures__btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">
                                 <a class="tp-btn-black tp-btn-shine-effect" href="#">About Stand-with-Gofa</a>
@@ -399,10 +393,10 @@
                         <div class="col-xl-4 col-lg-4 col-md-6">
                             <div class="tp-about__right d-flex justify-content-lg-end">
                                 <div class="tp-about__btn wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
-                                    <a class="tp-btn-black tp-btn-shine-effect" href="#">About Stand-with-Gofa</a>
+                                    <a class="tp-btn-black tp-btn-shine-effect" href="#">ጠሳይ ዳንዳያ እሞ! ጦሳይ ምንቴቶ </a>
                                 </div>
                                 <div class="about__play-btn ml-30 wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <a class="play-video popup-video" href="#"><i
+                                    <a class="play-video popup-video" href="https://www.youtube.com/watch?v=hd9TNPwu5Lo"><i
                                  class="fa-solid fa-play"></i></a>
                                 </div>
                             </div>
@@ -671,11 +665,11 @@
                                             <img class="mx-auto d-block" src="assets/img/testimonial/home-1/Ellipse-1.jpg" alt="">
                                         </div>
                                         <div class="tptestimonial__tlitle">
-                                            “I alone cannot <span>change the world</span>, but I can cast a stone across the waters to create many ripples”
+                                            “በጎፋ ዞን ገዜ ጎፋ ወረዳ ኬንቾ ሻቻ ጎዝዲ ቀበሌ ድንገተኛ የመሬት ናዳ አደጋ <span>የበርካታ ዜጎቻችንን ሕይወት</span> ቀጥፏል። በደረሰው አስከፊ ጉዳት የተሰማኝን ጥልቅ ሀዘን እገልጻለሁ።”
                                         </div>
                                         <div class="tptestimonial__authur">
-                                            <span class="text-center">Mother Teresa</span>
-                                            <p class="text-center">Mother Teresa</p>
+                                            <span class="text-center">ጠ/ሚ ዶ/ር ዐቢይ አህመድ </span>
+                                            <p class="text-center">ዶ/ር ዐቢይ አህመድ </p>
                                         </div>
                                     </div>
                                     <div class="tptestimonial__content ">
