--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <div class="hero-item hero-height p-relative">
-                    <div class="tpslider__thumb"><img src="assets/img/slider/home2/slider3.jpg" alt=""></div>
+                    <div class="tpslider__thumb"><img src="assets/img/slider/home2/slider2.jpg" alt=""></div>
                     <div class="hero-item-box">
                         <div class="hero-item-inner">
                             <div class="container-fluid">
@@ -263,7 +263,10 @@
                             <span class="section-sub-title has-before wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">ታሳ ታሳ</span>
                             <h3 class="section-title wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Various things we can help them</h3>
                             <div class="tpfeatures__btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">
-                                <a class="tp-btn-black tp-btn-shine-effect" href="#">About Stand-with-Gofa</a>
+                                <a class="tp-btn-black tp-btn-shine-effect" href="#">Short Code 8091</a>
+                            </div>
+                            <div class="tpfeatures__btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">
+                                <a class="tp-btn-black tp-btn-shine-effect" href="#">CBE 1000641522426</a>
                             </div>
                         </div>
                     </div>
@@ -275,7 +278,7 @@
                                         <img src="assets/img/icon/features-1.png" alt="">
                                     </div>
                                     <div class="tpfeatures__content">
-                                        <h3 class="tpfeatures__title"><a href="#">Food and water</a></h3>
+                                        <h3 class="tpfeatures__title"><a href="#">Food</a></h3>
                                         <p>Your raised hand is invaluable in any means </p>
                                     </div>
                                 </div>
@@ -286,7 +289,7 @@
                                         <img src="assets/img/icon/features-2.png" alt="">
                                     </div>
                                     <div class="tpfeatures__content">
-                                        <h3 class="tpfeatures__title"><a href="#">Environment</a></h3>
+                                        <h3 class="tpfeatures__title"><a href="#">Clothings</a></h3>
                                         <p>Your raised hand is invaluable in any means </p>
                                     </div>
                                 </div>
@@ -297,7 +300,7 @@
                                         <img src="assets/img/icon/features-3.png" alt="">
                                     </div>
                                     <div class="tpfeatures__content">
-                                        <h3 class="tpfeatures__title"><a href="#">Build and repear</a></h3>
+                                        <h3 class="tpfeatures__title"><a href="#">Health Treatment</a></h3>
                                         <p>Your raised hand is invaluable in any means </p>
                                     </div>
                                 </div>
@@ -308,7 +311,7 @@
                                         <img src="assets/img/icon/features-4.png" alt="">
                                     </div>
                                     <div class="tpfeatures__content">
-                                        <h3 class="tpfeatures__title"><a href="#">Education</a></h3>
+                                        <h3 class="tpfeatures__title"><a href="#">Giving Love by Your Hug</a></h3>
                                         <p>Your raised hand is invaluable in any means </p>
                                     </div>
                                 </div>
@@ -426,7 +429,26 @@
                 <div class="causes-active slick-20">
                     <div class="causes-item">
                         <div class="tpcard__wrapper tpcard__wrappr-2 white-bg">
-                            <div class="tpcard__img grayscale">
+                            <div class="tpcard__img grayscal">
+                                <a href="#"><img src="assets/img/card/home1/card-101.jpg" alt=""></a>
+                            </div>
+                            <div class="tpcard__content">
+                                <h4 class="tpcard__title"><a href="#">Master Abinet Kebede</a>
+                                </h4>
+                                <div class="tpcard__progresss">
+                                    <div class="progress">
+                                        <div class="progress-ba" role="progressbar" aria-label="Example with label" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                                            <span>More than saying</span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="causes-item">
+                        <div class="tpcard__wrapper tpcard__wrappr-2 white-bg">
+                            <div class="tpcard__img grayscal">
                                 <a href="#"><img src="assets/img/card/home1/card-44.jpg" alt=""></a>
                             </div>
                             <div class="tpcard__content">
@@ -445,7 +467,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="tpcard__wrapper tpcard__wrappr-2 white-bg">
-                            <div class="tpcard__img grayscale">
+                            <div class="tpcard__img grayscal">
                                 <a href="#"><img src="assets/img/card/home1/card-11.jpg" alt=""></a>
                             </div>
                             <div class="tpcard__content">
@@ -464,7 +486,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="tpcard__wrapper tpcard__wrappr-2 white-bg">
-                            <div class="tpcard__img grayscale">
+                            <div class="tpcard__img grayscal">
                                 <a href="#"><img src="assets/img/card/home1/card-22.jpg" alt=""></a>
                             </div>
                             <div class="tpcard__content">
@@ -483,7 +505,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="tpcard__wrapper tpcard__wrappr-2 white-bg">
-                            <div class="tpcard__img grayscale">
+                            <div class="tpcard__img grayscal">
                                 <a href="#"><img src="assets/img/card/home1/card-33.jpg" alt=""></a>
                             </div>
                             <div class="tpcard__content">
@@ -503,7 +525,7 @@
 
                     <div class="causes-item">
                         <div class="tpcard__wrapper tpcard__wrappr-2 white-bg">
-                            <div class="tpcard__img grayscale">
+                            <div class="tpcard__img grayscal">
                                 <a href="#"><img src="assets/img/card/home1/card-66.jpg" alt=""></a>
                             </div>
                             <div class="tpcard__content">
@@ -522,7 +544,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="tpcard__wrapper tpcard__wrappr-2 white-bg">
-                            <div class="tpcard__img grayscale">
+                            <div class="tpcard__img grayscal">
                                 <a href="#"><img src="assets/img/card/home1/card-77.jpg" alt=""></a>
                             </div>
                             <div class="tpcard__content">
@@ -541,7 +563,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="tpcard__wrapper tpcard__wrappr-2 white-bg">
-                            <div class="tpcard__img grayscale">
+                            <div class="tpcard__img grayscal">
                                 <a href="#"><img src="assets/img/card/home1/card-88.jpg" alt=""></a>
                             </div>
                             <div class="tpcard__content">
@@ -560,7 +582,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="tpcard__wrapper tpcard__wrappr-2 white-bg">
-                            <div class="tpcard__img grayscale">
+                            <div class="tpcard__img grayscal">
                                 <a href="#"><img src="assets/img/card/home1/card-99.jpg" alt=""></a>
                             </div>
                             <div class="tpcard__content">
@@ -579,7 +601,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="tpcard__wrapper tpcard__wrappr-2 white-bg">
-                            <div class="tpcard__img grayscale">
+                            <div class="tpcard__img grayscal">
                                 <a href="#"><img src="assets/img/card/home1/card-55.jpg" alt=""></a>
                             </div>
                             <div class="tpcard__content">
