add short code to menu

--- a/index.html
+++ b/index.html
@@ -102,15 +102,10 @@
                             </div>
                             <div class="language d-none d-xxl-block ml-35">
                                 <span><a href="#">Eng <i class="fa-regular fa-chevron-down"></i></a></span>
-                                <ul>
-                                    <li><a href="#">Bangla</a></li>
-                                    <li><a href="#">Hindi</a></li>
-                                    <li><a href="#">Arabic</a></li>
-                                    <li><a href="#">Chaines</a></li>
-                                </ul>
+
                             </div>
                             <div class="header-btn">
-                                <a class="tp-btn tp-btn-shine-effect" href="#"><span>Donate now</span></a>
+                                <a class="tp-btn tp-btn-shine-effect" href="#"><span>Donate now - 8091</span></a>
                             </div>
                         </div>
                         <div class="mobile-menu d-xl-none">
@@ -141,7 +136,7 @@
             <div class="tp-mobile-menu-pos"></div>
             <div class="tp-side-content">
                 <div class="tp-side-content__inner-btn mb-100">
-                    <a href="contact.html" class="tp-btn">Donate now</a>
+                    <a href="#" class="tp-btn">Donate now</a>
                 </div>
                 <div class="tp-contact-info d-flex flex-column">
                     <a href="tel:088245684379"><i class="fa-solid fa-phone-flip"></i> +2236 384
