site meta data updated

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Stand-with-Gofa - NonProfit Charity HTML5 Template</title>
-    <meta name="description" content="">
+    <title>Stand with Gofa People, Ethiopia</title>
+    <meta name="description" content="Gofa zone, southern ethiopia">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="gofa,stand-with-gofa,landslides, south ethiopia, ethiopia, እትዮጵያ, gofa people, gofa land slide">
 
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/favicon.png">
