--- a/index.html
+++ b/index.html
@@ -140,9 +140,8 @@
                     <a href="#" class="tp-btn">Donate now</a>
                 </div>
                 <div class="tp-contact-info d-flex flex-column">
-                    <a href="tel:088245684379"><i class="fa-solid fa-phone-flip"></i> +2236 384
-                  870</a>
-                    <a class="mail" href="mailto:infomai.@mail.com">Infomai.@mail.com</a>
+                    <a href="tel:088245684379"><i class="fa-solid fa-phone-flip"></i> 8091</a>
+                    <a class="mail" href="mailto:gofa.@mail.com">gofa.@mail.com</a>
                 </div>
                 <div class="tpfooter__social tpside-social">
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -168,8 +167,8 @@
                                 <div class="row hero-plr-225">
                                     <div class="col-xl-12">
                                         <div class="tpslider__content mb-90">
-                                            <span class="tphero__subtitle has-before-hero">Who what we</span>
-                                            <h2 class="tphero__title">Give a helping hand to <br> those who need <span>...</span>
+                                            <span class="tphero__subtitle has-before-hero">ዳንዳያ ኢሞ</span>
+                                            <h2 class="tphero__title">የጋራ ሃዘን ከለለ <br> የጋራ ደስታ አይኖርም <span>...</span>
                                             </h2>
                                             <div class="hero-btn">
                                                 <a class="tp-btn tp-btn-shine-effect" href="#">About us</a>
@@ -233,8 +232,8 @@
                                 <div class="row hero-plr-225">
                                     <div class="col-xl-12">
                                         <div class="tpslider__content mb-90">
-                                            <span class="tphero__subtitle has-before-hero">Who what we</span>
-                                            <h2 class="tphero__title">Give a helping hand to <br> those who need <span>...</span>
+                                            <span class="tphero__subtitle has-before-hero">ታሳ ታሳ</span>
+                                            <h2 class="tphero__title">ሰውን ለመርዳት <br>ሰው መሆን በቂ ነዉ <span>...</span>
                                             </h2>
                                             <div class="hero-btn">
                                                 <a class="tp-btn tp-btn-shine-effect" href="#">About us</a>
